Build container based on new release

--- a/.github/workflows/build-and-push-container-image.yaml
+++ b/.github/workflows/build-and-push-container-image.yaml
@@ -1,8 +1,8 @@
 name: build-and-push-container-image
 on:
-  push:
-    tags:
-     - '*'
+  release:
+    types:
+      - published
 
 jobs:
   build-and-push-container-image:
