--- a/.github/workflows/build-and-push-container-image.yaml
+++ b/.github/workflows/build-and-push-container-image.yaml
@@ -21,7 +21,7 @@ jobs:
           echo "version=$version" >> $GITHUB_OUTPUT
 
       - name: Checkout GIT repository
-        uses: actions/checkout@v3A
+        uses: actions/checkout@v3
         with:
           ref: v${{ steps.next_version.outputs.version }}
 
