Upgrade dependencies, add linters and tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-datetime==5.3
+datetime>=5.3,<6
 # needs to be fixed to 0.0.14 and \src\usr\local\lib\python3.9\site-packages\dsbapi\__init__.py needs to be removed
 dsbapipy>=0.0.13
-http.client==0.1.22
-pytesseract==0.3.10
+http.client>=0.1.22,<1
+pytesseract>=0.3.10,<1
