--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install ruff pytest
           pip install -r requirements.txt
+          pip install pandas
       - name: Lint with ruff
         run: |
           # stop the build if there are Python syntax errors or undefined names
