--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,7 +25,16 @@ jobs:
           pip install ruff pytest
           pip install -r requirements.txt
           pip install beautifulsoup4 numpy packaging pandas pillow requests
-          cp ./src/usr/lib/python3.12/site-packages/dsbapi/__init__.py /usr/lib/python${{ matrix.python-version }}/site-packages/dsbapi/__init__.py
+      - name: Overwrite dsbapi from local version
+        run: |
+          # identify site-packages directory
+          sitepackages_dir=$(python -c 'import site; print(site.getsitepackages()[0])')
+          if [ -d "${sitepackages_dir}" ]; then
+            cp ./src/usr/lib/python3.12/site-packages/dsbapi/__init__.py ${sitepackages_dir}/dsbapi/__init__.py
+          else
+            echo "Directory not found: ${sitepackages_dir}"
+            exit 1
+          fi
       - name: Lint with ruff
         run: |
           # stop the build if there are Python syntax errors or undefined names
